<resources>
    <string name="app_name">NavneetTest</string>
    <string name="profiles">Profiles</string>
    <string name="map">Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="emp_code">EMP Code</string>
    <string name="closeMsg">Do You want to close app</string>
</resources>