<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <LinearLayout
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:text="@string/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:text="@string/emp_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/tvContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/tvEmpCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>